--- a/homebuying/quiz.html
+++ b/homebuying/quiz.html
@@ -118,19 +118,22 @@
 			<div id="find"><button onclick="showPrograms()">Find me programs!</button></div>
 		</div>
 		<div id="programs">
-			<div class="program" id="coldwell">
+			<div class="program">
+				<p><i>Based on your responses to the questions, we believe you qualify for the following programs: </i><p>
+			</div>
+			<div class="program hide" id="coldwell">
 				<h2><a target="_blank" href="https://firsttimehomebuyersdenverco.com/home-loans-down-payments/first-time-home-buyers-programs/">Coldwell Banker</a></h2>
 				<p>This is a description of the tool, and an explanation as to why it was recommended.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.elevationclt.org/">Elevation Community Land Trust</a></h2>
 				<p>deed-restricted low-cost homes</p>
 			</div>
-			<div class="program" id="cclt">
+			<div class="program hide" id="cclt">
 				<h2><a target="_blank" href="https://habitatmetrodenver.org/home-programs/cclt/">Colorado Community Land Trust</a></h2>
 				<p>community land trust through Habitat for Humanity</p>
 			</div>
-			<div class="program" id="denverhousing">
+			<div class="program hide" id="denverhousing">
 				<h2><a target="_blank" href="https://www.denverhousing.org/live-at-dha/">Denver Housing Authority</a></h2>
 				<p>Denver Housing Authority provides quality and safe rental housing for families and individuals. We offer a variety of housing opportunities.</p>
 			</div>
@@ -138,19 +141,19 @@
 				<h2><a target="_blank" href="https://www.houseloan.com/about/">Cornerstone Lending</a></h2>
 				<p>Over three decades and nearly 500,000 satisfied families later, Cornerstone was approved as a state savings bank in October 2022. We are humbled to be a premier national lender with the highest ratings for customer service and team member satisfaction. Through helping our Team Members build individual legacies of service and kindness, our positive impact on others will continue to grow.</p>
 			</div>
-			<div class="program" id="start2">
+			<div class="program hide" id="start2">
 				<h2><a target="_blank" href="https://longmont.start2home.com/for-employers/">Start 2 Home</a></h2>
 				<p>Designed to help you and your employees happily settle in your town! Start 2 Home is a direct benefit of your investment in your local Economic Development Organization and can help you with employee retention and attraction. Through a partnership between your local Economic Development Organization and Cornerstone Home Lending Inc., you and your employees can enjoy a smooth, stress-free move with Start 2 Home.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://chaconline.org/borrowers/">Colorado Housing Assistance Corporation</a></h2>
 				<p>CHAC provides low interest, flexible loans to low and moderate income households for down payment and closing cost assistance throughout Colorado. CHAC received certification from the US Department of the Treasury as a Certified Community Development Financial Institution, (CDFI) CHAC is a designated HUD Certified Housing Counseling Agency.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.elevationclt.org/application-process/">Elevation Community Land Trust</a></h2>
 				<p>Elevation CLT makes homeownership more accessible for Colorado families through the community land trust model, a proven tool for creating and preserving accessible, inclusive communities for generations. Elevation CLT is focused on acquiring or developing 700 permanently affordable homes and serving approximately 2,000 residents in its first five years—making it one of the largest CLTs in Colorado and the country.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.chfainfo.com/homeownership/how-to-get-a-chfa-program-loan">CFHA down payment loans</a></h2>
 				<p>"Colorado Housing and Finace Authority CHFA believes in responsible, affordable homeownership. Through our statewide network of Participating Lenders, we offer:Home purchase loan programs, Grants and second mortgage loans for down payment and/or closing cost assistance</p>
 			</div>
@@ -158,7 +161,7 @@
 				<h2><a target="_blank" href="https://landed.com/">Landed</a></h2>
 				<p>In 2015, Alex Lofton, Jonathan Asmis and Jesse Vaughan founded Landed to uphold those who uphold us: our educators, healthcare workers, and public sector employees. As a homebuying partner, Landed has worked with employers, governments and investors to equip aspiring homebuyers across the U.S. with the tools and financial support needed to purchase $1B worth of residential real estate and make homeownership a reality for these hardworking, essential community members.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.dearfieldfund.com/">Dearfield Fund</a></h2>
 				<p>BUILDING BLACK WEALTH THROUGH HOMEOWNERSHIP The Dearfield Fund for Black Wealth provides up to $40,000 in down-payment assistance to first-time Black and African American homebuyers to help build generational wealth. The down-payment assistance is like a loan, but homeowners do not make monthly payments and pay no interest. Instead, when homeowners sell or refinance they repay the down-payment amount plus 5% of their home’s appreciation, which allows the Dearfield Fund to serve more Black homeowners.</p>
 			</div>
@@ -174,7 +177,7 @@
 				<h2><a target="_blank" href="https://nahrepdenver.org/who-we-are/">NAHREP- National Association of Hispanic Real Estate Professionals </a></h2>
 				<p>We are The Voice for Hispanic Real Estate® and proud champions of homeownership for the Hispanic community in and around Denver, Colorado. Our NAHREP&reg; Denver Chapter provides community outreach, industry educational and business networking events thanks to the gracious contributions of our Denver Chapter Board of Directors, members and NAHREP&reg; Denver sponsors.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.chfainfo.com/mi-hogar">Mi Hogar- CHAFA</a></h2>
 				<p>CFHA website all in Spanish Colorado Housing and Finace Authority CHFA believes in responsible, affordable homeownership. Through our statewide network of Participating Lenders, we offer:Home purchase loan programs, Grants and second mortgage loans for down payment and/or closing cost assistance</p>
 			</div>
@@ -186,11 +189,11 @@
 				<h2><a target="_blank" href="https://unidosus.org/housing-equity/">Unidos US</a></h2>
 				<p>UnidosUS aims to support Latino families in their homeownership journeys by creating pathways for Latino homebuyers to build credit, afford a down payment, and get approved for a sustainable mortgage loan. We are uniquely positioned to achieve this goal by combining our reputation and expertise across programs, policy, community outreach, and national partnerships.Wells Fargo is an anchor funder and champion of the UnidosUS housing initiative.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://habitatmetrodenver.org/homeownership/">Habitat for Humantity Metro Denver</a></h2>
 				<p>Our homeownership program partners with working individuals and families to buy their own homes with affordable mortgages. Our future homeowners are involved in every step of the home buying process – volunteering with Habitat, getting to know our staff, and attending classes to become successful homeowners.</p>
 			</div>
-			<div class="program" id="elevation">
+			<div class="program hide" id="elevation">
 				<h2><a target="_blank" href="https://www.chfainfo.com/getattachment/0d14dd17-fdaa-4cc8-8cb1-b1407d7beca9/CHFA_Income_Limits.pdf">PDF about CHFA incomelimits</a></h2>
 				<p>This is a PDF</p>
 			</div>
