--- a/DadsCDs/index.html
+++ b/DadsCDs/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="fonts/fonts.css"/>
 		<link rel="stylesheet" href="style.css"/>
 		<script src="script.js"></script>
+		<meta name="viewport" content="width=device-width, initial-scale=0.8, user-scalable=no">
 	</head>
 	<body>
 		<div id="container">
@@ -18,21 +19,21 @@
 		<img onmouseover="infoBox('As Above So Below','Barry Adamson','https://f4.bcbits.com/img/a0123497880_2.jpg','')" src="spines/CD08.jpg"/>
 		<img onmouseover="infoBox('The King of Nothing Hill','Barry Adamson','https://f4.bcbits.com/img/a0017790335_2.jpg','')" src="spines/CD09.jpg"/>
 		<img onmouseover="infoBox('Stranger on the Sofa','Barry Adamson','https://f4.bcbits.com/img/a3604507007_2.jpg','')" src="spines/CD10.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://i.discogs.com/BU6UGwK9fFNLYddNuUlDeVEb-9MwGTsuhESF4PnSpDU/rs:fit/g:sm/q:90/h:600/w:598/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTUyNDM3/LTE0MzQ0ODM0NzIt/Nzk4NS5qcGVn.jpeg','')" src="spines/CD11.jpg"/>
-		<img onmouseover="infoBox('title','artist','cover','')" src="spines/CD12.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/706dfef8-af91-416a-9055-7d43e91ea0b0/6766882282-250.jpg','')" src="spines/CD13.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/70f340dd-0ba5-308a-8711-3f4f98684bef/20380929672-250.jpg','')" src="spines/CD14.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/c4470a6a-fb2a-34d8-a844-efa15d687268/9306347749-250.jpg','')" src="spines/CD15.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/45b729bb-21ea-31b0-a1ad-71946b723627/1270013482-250.jpg','')" src="spines/CD16.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/4d172642-ca71-38c7-aa95-5a498dd5b8fb/10582180974-250.jpg','')" src="spines/CD17.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/fe19519a-7c0e-4421-8464-99e5f21e6235/13538337911-250.jpg','')" src="spines/CD18.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/0d4aa90e-02d9-3003-a77f-a9706c1ac77e/3678786137-250.jpg','')" src="spines/CD19.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/b8f3c647-89b1-4cd6-bb71-a91072380e46/2979651729-250.jpg','')" src="spines/CD20.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/72fb4577-74a5-4616-9d05-dc577944f612/13286627559-250.jpg','')" src="spines/CD21.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://www.discogs.com/release/13169597-Nicola-Alesini-Pier-Luigi-Andreoni-Featuring-David-Sylvian-Roger-Eno-David-Torn-Harold-Budd-Marco-Po/image/SW1hZ2U6Mzg0NjMyNjM=','')" src="spines/CD22.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://www.discogs.com/master/518686-Nicola-Alesini-Pier-Luigi-Andreoni-Featuring-Steve-Jansen-Richard-Barbieri-Roger-Eno-Harold-Budd-Dav/image/SW1hZ2U6NDg1OTYzNg==','')" src="spines/CD23.jpg"/>
-		<img onmouseover="infoBox('title','artist','https://coverartarchive.org/release/64e82659-ed4f-4cfc-8a50-ac4e399d6e03/25497413557-250.jpg','')" src="spines/CD24.jpg"/>
-		<img onmouseover="infoBox('title','artist','http://ec1.images-amazon.com/images/I/51R7J4M3T6L._AA240_.jpg','')" src="spines/CD25.jpg"/>
+		<img onmouseover="infoBox('Add N to (X)','Avant Hard','https://i.discogs.com/BU6UGwK9fFNLYddNuUlDeVEb-9MwGTsuhESF4PnSpDU/rs:fit/g:sm/q:90/h:600/w:598/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTUyNDM3/LTE0MzQ0ODM0NzIt/Nzk4NS5qcGVn.jpeg','')" src="spines/CD11.jpg"/>
+		<img onmouseover="infoBox('Add N to (X)','??','cover','is this the same album twice??')" src="spines/CD12.jpg"/>
+		<img onmouseover="infoBox('Great Vintage Vol. 2','African Head Charge','https://coverartarchive.org/release/706dfef8-af91-416a-9055-7d43e91ea0b0/6766882282-250.jpg','')" src="spines/CD13.jpg"/>
+		<img onmouseover="infoBox('In Pursuit of Shashamane Land','African Head Charge','https://coverartarchive.org/release/70f340dd-0ba5-308a-8711-3f4f98684bef/20380929672-250.jpg','')" src="spines/CD14.jpg"/>
+		<img onmouseover="infoBox('Volume 1: Sound Magic','Afro Celt Sound System','https://coverartarchive.org/release/c4470a6a-fb2a-34d8-a844-efa15d687268/9306347749-250.jpg','')" src="spines/CD15.jpg"/>
+		<img onmouseover="infoBox('Premiers Symptomes','Air','https://coverartarchive.org/release/45b729bb-21ea-31b0-a1ad-71946b723627/1270013482-250.jpg','')" src="spines/CD16.jpg"/>
+		<img onmouseover="infoBox('Moon Safari','Air','https://coverartarchive.org/release/4d172642-ca71-38c7-aa95-5a498dd5b8fb/10582180974-250.jpg','')" src="spines/CD17.jpg"/>
+		<img onmouseover="infoBox('The Virgin Suicides','Air','https://coverartarchive.org/release/fe19519a-7c0e-4421-8464-99e5f21e6235/13538337911-250.jpg','')" src="spines/CD18.jpg"/>
+		<img onmouseover="infoBox('10,000hz Legend','Air','https://coverartarchive.org/release/0d4aa90e-02d9-3003-a77f-a9706c1ac77e/3678786137-250.jpg','')" src="spines/CD19.jpg"/>
+		<img onmouseover="infoBox('Talkie Walkie','Air','https://coverartarchive.org/release/b8f3c647-89b1-4cd6-bb71-a91072380e46/2979651729-250.jpg','')" src="spines/CD20.jpg"/>
+		<img onmouseover="infoBox('Pocket Symphony','Air','https://coverartarchive.org/release/72fb4577-74a5-4616-9d05-dc577944f612/13286627559-250.jpg','')" src="spines/CD21.jpg"/>
+		<img onmouseover="infoBox('Marco Polo','Alesini &amp; Andreoni','https://i.discogs.com/Al6lbKX8_xNo26a_03CoH5ccDAR0X4CT62TGBm2kVLE/rs:fit/g:sm/q:90/h:592/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTEzMTY5/NTk3LTE1NDkyNDk0/OTUtMjQ1MC5qcGVn.jpeg','')" src="spines/CD22.jpg"/>
+		<img onmouseover="infoBox('Marco Polo II','Alesini &amp; Andreoni','https://i.discogs.com/A_mnEMkZdUKE71JuGHmmSEDLmsBpMiB4kLBL09_ndJ4/rs:fit/g:sm/q:90/h:593/w:600/czM6Ly9kaXNjb2dz/LWRhdGFiYXNlLWlt/YWdlcy9SLTMwMjg3/NS0xMjk5MTU0ODcz/LmpwZWc.jpeg','')" src="spines/CD23.jpg"/>
+		<img onmouseover="infoBox('Classics Volume 1','Herb Alpert & The Tijuana Brass','https://coverartarchive.org/release/64e82659-ed4f-4cfc-8a50-ac4e399d6e03/25497413557-250.jpg','')" src="spines/CD24.jpg"/>
+		<img onmouseover="infoBox('Colors','Herb Alpert','http://ec1.images-amazon.com/images/I/51R7J4M3T6L._AA240_.jpg','')" src="spines/CD25.jpg"/>
 		<img onmouseover="infoBox('title','artist','cover','')" src="spines/CD26.jpg"/>
 		<img onmouseover="infoBox('title','artist','cover','')" src="spines/CD27.jpg"/>
 		<img onmouseover="infoBox('title','artist','cover','')" src="spines/CD28.jpg"/>
@@ -256,4 +257,3 @@
 		</div>
 	</body>
 </html>
-
