--- a/Esa/index.html
+++ b/Esa/index.html
@@ -7,9 +7,10 @@
 		<link rel="shortcut icon" href="Favicon.png">
 		<link rel="icon" type="../image/png" href="Favicon.png">
 		<meta property="og:title" content="Esa Hall" />
+		<meta name=viewport content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h2>&#x2768; Healing With &#x2769;</h2>
+		<h2 id="small-title">&#x2768; Healing With &#x2769;</h2>
 		<h1 id="title">Mushrooms</h1>
 		<div style="height: 80px;"></div>
 		<div id="body">
