--- a/Esa/index.html
+++ b/Esa/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Esa Hall</title>
+		<title>&#x1F344; Esa Hall &#x1F344;</title>
 		<link rel="stylesheet" href="style.css"/>
 		<script src="script.js"></script>
 		<link rel="shortcut icon" href="Favicon.png">
@@ -10,28 +10,38 @@
 		<meta name=viewport content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h2 id="small-title">&#x2768; Healing With &#x2769;</h2>
-		<h1 id="title">Mushrooms</h1>
-		<div style="height: 80px;"></div>
+		<h2 id="small-title">&#x2768; Healing With Mushrooms &#x2769;</h2>
+		<h1 id="title">Esa Hall</h1>
+		<h2 id="subhead">Licensed Psilocybin Facilitator</h2>
+		<h2 id="subhead"><a href="#">Schedule a Consultation&#8594;</a></h2>
+		<div style="height: 200px;"></div>
 		<div id="body">
-			<h2>My name is Esa...</h2>
-			<p>...and I'm a licensed psilocybin facilitator. Within all of us is the innate ability to heal. Guided mushroom use can help us unlock that ability. If you think mushrooms might help you, <a href="#">schedule a consultation &#8594;</a></p>
-			<div class="brownshroom"></div>
-			<h2>Benefits of Psilocybin</h2>
-			<p>Psilocybin has been proven to help treat</p>
-			<ul>
-				<li>Depression</li>
-				<li>Anxiety</li>
-				<li>PTSD</li>
-				<li>Addiction</li>
-			</ul>
-			<div class="brownshroom"></div>
-			<h2>About Esa Hall</h2>
-			<p>I am really great at drugs. I have a lot of experience and I have some fancy credentials from an organization that trains people to be good at drugs so you know it's not just me saying that I'm good at drugs.</p>
-			<img src="esa.jpg"/>
+			<h2>Some catchy phrase</h2>
+			<p>Within all of us is the innate ability to heal. Mushrooms are a powerful tool that can help us identify, process, and ultimately let go of the stories, patterns, addictions, so that we have the space to recreate who we are and connect with our authentic self.</p>
+			<p>It’s my role as your facilitator to equip you with the tools to have a deep, meaningful experience, and hold a container for you to explore and express yourself freely & safely.</p>
 		</div>
-		<h2>I'm in Portland BTW</h2>
-		<div class="shroom"></div>
+		<h2><br>Intentional Mushroom Journeys can help with:</h2>
+		<ul>
+			<li>Anxiety</li>
+			<li>Depression</li>
+			<li>Grief</li>
+			<li>Addiction</li>
+			<li>Eating Disorders</li>
+			<li>Creativity</li>
+			<li>PTSD</li>
+			<li>Traumatic Brain Injuries</li>
+			<li>Authenticity</li>
+		</ul>
+		<div id="body">
+			<h2>The Process</h2>
+			<p>My abs. I will use makeup to better define their form during our session. Pictures of famous people’s toes. This helps you remember that everyone important has toes. Sacrifices. I ensure that there is fresh blood every 15 minutes during your journey, so as to please the dark forces empowering your experience.</p>
+			<p style="margin-bottom: 0;"><b>Preparation</b></p>
+			<p style="margin-top: 0">We’ll meet prior to your administration session either in person or over the phone/zoom. In this time, We’ll discuss what brings you to this work and refine your intention. You’ll be given tools/practices to assist you in having a deep and introspective journey, and I’ll begin working on personalizing the experience to best support you.</p>
+			<p style="margin-bottom: 0;"><b>The Journey</b></p>
+			<p style="margin-top: 0">This is when you take the mushrooms! You’ll have your psychedelic experience in a safe environment at a service center that we’ve chosen together. The environment will be catered to your needs, and I’ll bring in additional materials to curate an intentional space of support, comfort, safety, and fun for your healing process.</p>
+			<p style="margin-bottom: 0;"><b>Integration</b></p>
+			<p style="margin-top: 0">Integration is possibly the most important piece of the whole process. We’ll meet again in the days following your mushroom experience, and identify what was meaningful to you and what you’ve discovered that you’d like to incorporate more into your life. From there, I’ll offer tools and practices unique to your experience to help weave your newfound insights into the patterns of your daily life. The journey is never over, I remain available for further support and can connect you with other resources along your path of healing and self discovery.</p>
+		</div>
 	</body>
 </html>
 
