--- a/Esa/index.html
+++ b/Esa/index.html
@@ -32,6 +32,8 @@
 			<li>Traumatic Brain Injuries</li>
 			<li>Authenticity</li>
 		</ul>
+		<div style="clear:both;"></div>
+		<br><br><br>
 		<div id="body">
 			<h2>The Process</h2>
 			<p>My abs. I will use makeup to better define their form during our session. Pictures of famous people’s toes. This helps you remember that everyone important has toes. Sacrifices. I ensure that there is fresh blood every 15 minutes during your journey, so as to please the dark forces empowering your experience.</p>
