--- a/Esa/index.html
+++ b/Esa/index.html
@@ -16,7 +16,7 @@
 		<h2 id="subhead"><a href="#">Schedule a Consultation&#8594;</a></h2>
 		<div style="height: 200px;"></div>
 		<div id="body">
-			<h2>Some catchy phrase</h2>
+			<h2>Portland-Based Mushroom Therapy</h2>
 			<p>Within all of us is the innate ability to heal. Mushrooms are a powerful tool that can help us identify, process, and ultimately let go of the stories, patterns, addictions, so that we have the space to recreate who we are and connect with our authentic self.</p>
 			<p>It’s my role as your facilitator to equip you with the tools to have a deep, meaningful experience, and hold a container for you to explore and express yourself freely & safely.</p>
 		</div>
@@ -44,6 +44,8 @@
 			<p style="margin-bottom: 0;"><b>Integration</b></p>
 			<p style="margin-top: 0">Integration is possibly the most important piece of the whole process. We’ll meet again in the days following your mushroom experience, and identify what was meaningful to you and what you’ve discovered that you’d like to incorporate more into your life. From there, I’ll offer tools and practices unique to your experience to help weave your newfound insights into the patterns of your daily life. The journey is never over, I remain available for further support and can connect you with other resources along your path of healing and self discovery.</p>
 		</div>
+		<h2><br>Get In Touch</h2>
+		<p>If you have any questions, would like to schedule a free consultation, or feel ready to book, reach out and we’ll make it happen!</p>
 	</body>
 </html>
 
