--- a/EssaysAboutSex/index.html
+++ b/EssaysAboutSex/index.html
@@ -82,6 +82,11 @@ a {
 	background-color: #f5d6ec;
 	color: #138388;
 }
+
+#aj:hover {
+	background-color: #ffa66b;
+	color: #000c2b;
+}
 		</style>
 	</head>
 	<body>
@@ -96,6 +101,8 @@ a {
 			<a href="https://ewonrael.github.io/EssaysAboutSex/06%20Men%20Can't%20Masturbate.pdf"><p id="ag">06 Men Can't Masturbate</p></a>
 			<a href="https://ewonrael.github.io/EssaysAboutSex/07%20Abuse%20and%20Authority.pdf"><p id="ah">07 Abuse and Authority</p></a>
 			<a href="https://ewonrael.github.io/EssaysAboutSex/08%20metoo.pdf"><p id="ai">08 #MeToo</p></a>
+			<a href="https://ewonrael.github.io/EssaysAboutSex/09%20Porn%20Addiction.pdf"><p id="aj">09 Porn Addiction</p></a>
 		</div>
 	</body>
 </html>
+
