--- a/crossword-squared/21.html
+++ b/crossword-squared/21.html
@@ -15,6 +15,9 @@
 	<body>
 		<h1 id="settings" onclick="opensettings()">&#9881;</h1><h1 id="backbutton"><a href="index.html">&#x279E;</a></h1>
 		<h1>crossword 21</h1>
+		<div id="explain">
+			<p>I&rsquo;m in a funny mood and I&rsquo;m writing funny clues. Deepest apologies.</p>
+		</div>
 		<input id="dummyinput" onfocusout="deselect()" oninput="dummyinput()"></input>
 		<table id="crossword">
 			<tr>
@@ -55,19 +58,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;That annoying duck insurance</p>
-			<p onclick="clue(6, true)">6.&emsp;New and unspoiled, in slang to be a bit of a smart-ass</p>
-			<p onclick="clue(11, true)">7.&emsp;Taunt</p>
-			<p onclick="clue(16, true)">8.&emsp;Apparently these are sea eagles or fish eagles</p>
-			<p onclick="clue(21, true)">9.&emsp;The part of the music where you don&rsquo;t play?</p>
+			<p onclick="clue(1, true)">1.&emsp;Unwelcome uncontrolled jerk?</p>
+			<p onclick="clue(6, true)">6.&emsp;Done to a diem</p>
+			<p onclick="clue(11, true)">7.&emsp;Often done to disagree</p>
+			<p onclick="clue(16, true)">8.&emsp;Following LA it sounds mourn-worthy, if you caught my drift?</p>
+			<p onclick="clue(21, true)">9.&emsp;Give them to your cat on my behalf</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;A type of party or a type of shave?</p>
-			<p onclick="clue(2, false)">2.&emsp;Tobias <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u>-Jones is a typography idol of mine. <u>Brother</u> Jacques, are you sleeping?</p>
-			<p onclick="clue(3, false)">3.&emsp;Those things Jack Sprat ate?</p>
-			<p onclick="clue(4, false)">4.&emsp;Maybe it&rsquo;s the thing you take out a loan against, maybe it&rsquo;s a Russian spy?</p>
-			<p onclick="clue(5, false)">5.&emsp;Apparently trans women have such a biological advantage in this sport than as of August 18 of this year the international federation has banned them from competing in the women&rsquo;s competitions???</p>
+			<p onclick="clue(1, false)">1.&emsp;Shrimp lost his eye and becomes a lovable rascal</p>
+			<p onclick="clue(2, false)">2.&emsp;Let them do the walking through the yellow fingers</p>
+			<p onclick="clue(3, false)">3.&emsp;French town once known for their tapestry</p>
+			<p onclick="clue(4, false)">4.&emsp;Exhausted, broke, and sleeping over</p>
+			<p onclick="clue(5, false)">5.&emsp;What boy does with girl (or world) sounds an awful lot like beef and pork if you ask me</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
