--- a/crossword-squared/22.html
+++ b/crossword-squared/22.html
@@ -55,19 +55,19 @@
 		</table>
 		<div id="across">
 			<p><b>&emsp;&emsp;&emsp;Across</b></p>
-			<p onclick="clue(1, true)">1.&emsp;That annoying duck insurance</p>
-			<p onclick="clue(6, true)">6.&emsp;New and unspoiled, in slang to be a bit of a smart-ass</p>
-			<p onclick="clue(11, true)">7.&emsp;Taunt</p>
-			<p onclick="clue(16, true)">8.&emsp;Apparently these are sea eagles or fish eagles</p>
-			<p onclick="clue(21, true)">9.&emsp;The part of the music where you don&rsquo;t play?</p>
+			<p onclick="clue(1, true)">1.&emsp;Western, romance, thriller, for example</p>
+			<p onclick="clue(6, true)">6.&emsp;How much laundry to do, alternatively, get one of this guy</p>
+			<p onclick="clue(11, true)">7.&emsp;Tossed like hash</p>
+			<p onclick="clue(16, true)">8.&emsp;Superficial burn</p>
+			<p onclick="clue(21, true)">9.&emsp;Opposed to the noes?</p>
 		</div>
 		<div id="down">
 			<p><b>&emsp;&emsp;&emsp;Down</b></p>
-			<p onclick="clue(1, false)">1.&emsp;A type of party or a type of shave?</p>
-			<p onclick="clue(2, false)">2.&emsp;Tobias <u>&emsp;&emsp;&emsp;&emsp;&emsp;</u>-Jones is a typography idol of mine. <u>Brother</u> Jacques, are you sleeping?</p>
-			<p onclick="clue(3, false)">3.&emsp;Those things Jack Sprat ate?</p>
-			<p onclick="clue(4, false)">4.&emsp;Maybe it&rsquo;s the thing you take out a loan against, maybe it&rsquo;s a Russian spy?</p>
-			<p onclick="clue(5, false)">5.&emsp;Apparently trans women have such a biological advantage in this sport than as of August 18 of this year the international federation has banned them from competing in the women&rsquo;s competitions???</p>
+			<p onclick="clue(1, false)">1.&emsp;Like some giants or cowboys or colas?</p>
+			<p onclick="clue(2, false)">2.&emsp;What&rsquo;s <q>Up</q> with Carl Fredricksen&rsquo;s dead wife?</p>
+			<p onclick="clue(3, false)">3.&emsp;Like the captain of a ship, or an island, or a statue, or snow</p>
+			<p onclick="clue(4, false)">4.&emsp;How far does this Rover go?</p>
+			<p onclick="clue(5, false)">5.&emsp;A square has four and a cube has twelve</p>
 		</div>
 		<div id="solved" class="invisable">
 			<div>
