--- a/EssaysAboutSex/index.html
+++ b/EssaysAboutSex/index.html
@@ -87,6 +87,12 @@ a {
 	background-color: #ffa66b;
 	color: #000c2b;
 }
+
+#ba:hover {
+	background-color: #252525;
+	color: #eccea9;
+	font-weight: 500;
+}
 		</style>
 	</head>
 	<body>
@@ -102,6 +108,7 @@ a {
 			<a href="https://ewonrael.github.io/EssaysAboutSex/07%20Abuse%20and%20Authority.pdf"><p id="ah">07 Abuse and Authority</p></a>
 			<a href="https://ewonrael.github.io/EssaysAboutSex/08%20metoo.pdf"><p id="ai">08 #MeToo</p></a>
 			<a href="https://ewonrael.github.io/EssaysAboutSex/09%20Porn%20Addiction.pdf"><p id="aj">09 Porn Addiction</p></a>
+			<a href="https://ewonrael.github.io/EssaysAboutSex/10%20The%20Christian%20Ideology%20of%20Mainstream%20Porn.pdf"><p id="ba">10 The Christian Ideology of Mainstream Porn</p></a>
 		</div>
 	</body>
 </html>
