--- a/EssaysAboutSex/index.html
+++ b/EssaysAboutSex/index.html
@@ -4,111 +4,23 @@
 		<title>Essays About Sex</title>
 		<meta property="og:title" content="Essays About Sex" />
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<style>
-@font-face {
-	font-family: "Drafting";
-	src: url("https://indestructibletype.com/Drafting/Drafting[wght].ttf") format("truetype");
-}
-
-body {
-	font-family: "Drafting", mono;
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
-}
-
-#body {
-	max-width: 800px;
-	margin: auto;
-}
-
-p {
-	padding-left: 40px;
-	float: left;
-	width: 100%;
-	margin: 0;
-	padding-top: 0.5em;
-	padding-bottom: 0.5em;
-	text-indent: -36px
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-#aa:hover {
-	background-color: #e3dbdb;
-	color: #483737;
-}
-
-#ab:hover {
-	background-color: #e5daf1;
-	color: #c02d19;
-}
-
-#ac:hover {
-	background-color: #b3d9e9;
-	color: #483737ff;
-}
-
-#ad:hover {
-	background-color: #ffeeb0;
-	color: #673a1d;
-}
-
-#ae:hover {
-	background-color: #fffaf0;
-	color: #db0000;
-}
-
-#af:hover {
-	background-color: #ff3d3d;
-	color: #2b0000;
-}
-
-#ag:hover {
-	background-color: #a7c2d9;
-	color: #0f0068;
-}
-
-#ah:hover {
-	background-color: #e14a4a;
-	color: #ffcf66;
-	font-weight: 500;
-}
-
-#ai:hover {
-	background-color: #f5d6ec;
-	color: #138388;
-}
-
-#aj:hover {
-	background-color: #ffa66b;
-	color: #000c2b;
-}
-
-#ba:hover {
-	background-color: #252525;
-	color: #eccea9;
-	font-weight: 500;
-}
-		</style>
+		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
 		<div id="body">
-			<p style="text-indent: 0"><b>Essays About Sex [PDF downloads]</b></p>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/00%20Introduction.pdf"><p id="aa">00 Essays About Sex [Introduction]</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/01%20A%20Colonial%20Mindset%20in%20Dutch%20Gay%20Spaces.pdf"><p id="ab">01 A Colonial Mindset in Dutch Gay Spaces</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/02%20furry%20porn.pdf"><p id="ac">02 Furry Porn is Good Porn</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/03%20Jazz%20Bros.pdf"><p id="ad">03 Jazz Bros</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/04%20Why%20Some%20Men%20Like%20Virgins.pdf"><p id="ae">04 Why Some Men Prefer Virgins</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/05%20More%20Thoughts%20About%20Violence.pdf"><p id="af">05 More Thoughts About Violence</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/06%20Men%20Can't%20Masturbate.pdf"><p id="ag">06 Men Can't Masturbate</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/07%20Abuse%20and%20Authority.pdf"><p id="ah">07 Abuse and Authority</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/08%20metoo.pdf"><p id="ai">08 #MeToo</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/09%20Porn%20Addiction.pdf"><p id="aj">09 Porn Addiction</p></a>
-			<a href="https://ewonrael.github.io/EssaysAboutSex/10%20The%20Christian%20Ideology%20of%20Mainstream%20Porn.pdf"><p id="ba">10 The Christian Ideology of Mainstream Porn</p></a>
+			<h1>Essays About Sex<br>&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;</h1>
+			<h2><a href="https://www.patreon.com/c/EwonRael">Patreon</a> | <a href="https://www.youtube.com/ewonrael">YouTube</a> | <a href="podcast/rss.xml">Podcast RSS</a> | <a href="PDFs.html">PDFs</h2>
+			<a href="00.html"><p id="aa">00 Essays About Sex [Introduction]</p></a>
+			<a href="01.html"><p id="ab">01 A Colonial Mindset in Dutch Gay Spaces</p></a>
+			<a href="02.html"><p id="ac">02 Furry Porn is Good Porn</p></a>
+			<a href="03.html"><p id="ad">03 Jazz Bros</p></a>
+			<a href="04.html"><p id="ae">04 Why Some Men Prefer Virgins</p></a>
+			<a href="05.html"><p id="af">05 More Thoughts About Violence</p></a>
+			<a href="06.html"><p id="ag">06 Men Can't Masturbate</p></a>
+			<a href="07.html"><p id="ah">07 Abuse and Authority</p></a>
+			<a href="08.html"><p id="ai">08 #MeToo</p></a>
+			<a href="09.html"><p id="aj">09 Porn Addiction</p></a>
+			<a href="10.html"><p id="ba">10 The Christian Ideology of Mainstream Porn</p></a>
 		</div>
 	</body>
 </html>
